<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuizQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/hint"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/hint"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/default_hint_button_bg"
            android:layout_marginTop="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="100dp"
            android:layout_gravity="start">
        </androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:id="@+id/txtquestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="#363a43"
            tools:text="What country does this flag belong to?">
        </TextView>

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image"
            tools:src="@drawable/ic_flag_of_india">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:paddingStart="10dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:indeterminate="false"
                android:max="10"
                android:minHeight="50dp"
                android:progress="1"
                tools:ignore="RtlSymmetry">
            </ProgressBar>

            <TextView
                android:id="@+id/txtprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:textSize="14sp"
                tools:text="0/10"
                tools:textColor="@color/black">
            </TextView>

        </LinearLayout>

        <TextView
            android:id="@+id/optionOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:background="@drawable/default_option_border_bg"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="#7a8089">
        </TextView>

        <TextView
            android:id="@+id/optionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:background="@drawable/default_option_border_bg"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="#7a8089">
        </TextView>

        <TextView
            android:id="@+id/optionThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:background="@drawable/default_option_border_bg"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="#7a8089">
        </TextView>

        <TextView
            android:id="@+id/optionFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:background="@drawable/default_option_border_bg"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="#7a8089">
        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/default_option_button_bg"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="100sp"
            android:layout_marginRight="100sp">
        </androidx.appcompat.widget.AppCompatButton>

        <ImageView
            android:id="@+id/hintBulb"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/hint"
            android:src="@drawable/ic_hint_bulb2"
            android:visibility="invisible">
        </ImageView>

        <TextView
            android:id="@+id/textHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">
        </TextView>

    </LinearLayout>

</ScrollView>